--- a/QUARTO_jatek/QUARTO_jatek.csproj
+++ b/QUARTO_jatek/QUARTO_jatek.csproj
@@ -52,10 +52,19 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Jatek.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Jatek.Designer.cs">
+      <DependentUpon>Jatek.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Jatek.resx">
+      <DependentUpon>Jatek.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
