--- a/QUARTO_jatek/QUARTO_jatek.csproj
+++ b/QUARTO_jatek/QUARTO_jatek.csproj
@@ -69,13 +69,14 @@
       <DependentUpon>Jatek.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
+      <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
     </EmbeddedResource>
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -89,6 +90,54 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Kicsi_Fekete_Lyukas_Kör.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Kicsi_Fekete_Lyukas_Négyzet.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Kicsi_Fekete_Teli_Kör.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Kicsi_Fekete_Teli_Négyzet.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Kicsi_Piros_Lyukas_Kör.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Kicsi_Piros_Lyukas_Négyzet.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Kicsi_Piros_Teli_Kör.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Kicsi_Piros_Teli_Négyzet.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Nagy_Fekete_Lyukas_Kör.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Nagy_Fekete_Lyukas_Négyzet.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Nagy_Fekete_Teli_Kör.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Nagy_Fekete_Teli_Négyzet.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Nagy_Piros_Lyukas_Kör.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Nagy_Piros_Lyukas_Négyzet.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Nagy_Piros_teli_Kör.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Nagy_Piros_Teli_Négyzet.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
