--- a/QUARTO_jatek/QUARTO_jatek.csproj
+++ b/QUARTO_jatek/QUARTO_jatek.csproj
@@ -139,5 +139,8 @@
   <ItemGroup>
     <None Include="Resources\Nagy_Piros_Teli_Négyzet.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\SzuperTábla.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
